# DisPOSE

./: .gitignore  LICENSE  README.md  pyproject.toml
checkpoints/: t_pose.pt
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  none.yaml
configs/data/: Campus.yaml  MM_OR.yaml  Panoptic.yaml  Shelf.yaml
configs/data/augmentations/: no_augmentations.yaml  standard_augmentations.yaml
configs/dataset/: campus.yaml  mm_or.yaml  panoptic.yaml  shelf.yaml
configs/hydra/: default.yaml  eval.yaml
configs/logger/: wandb.yaml
configs/model/: Heatmap.yaml  Pose.yaml
configs/model/Assignment/: HGDiffusion.yaml
configs/model/Backbone/: ResNet.yaml
configs/model/Regression/: Graph.yaml
configs/task/: backbone.yaml  pose.yaml
configs/trainer/: debug.yaml  default.yaml  eval.yaml
docs/: 404.html  index.html
docs/static/css/: blog.css
docs/static/js/: main.js
preparation/: generate.py
preparation/data/panoptic/: get_data.sh
preparation/experiments/: campus_train.yaml  mm_or_train.yaml  panoptic_train.yaml  shelf_train.yaml
preparation/utils/: config.py  detection.py  filter.py
preparation/utils/datasets/: __init__.py  base.py  campus.py  mm_or.py  mm_or_polygons.py  panoptic.py  shelf.py
src/: eval.py  train.py
src/callbacks/: heatmap_viz.py  pose_viz.py  progress.py
src/data/: base.py  collate_fn.py  joint_datamodule.py  samplers.py  utils.py
src/data/datasets/: __init__.py  base.py  campus_dataset.py  campus_utils.py  mm_or_dataset.py  mm_or_utils.py  panoptic_dataset.py  panoptic_utils.py  shelf_dataset.py  shelf_utils.py
src/data/transforms/: __init__.py  augmentation.py
src/losses/: __init__.py  base.py  loss.py
src/losses/custom/: pseudo_regression_loss.py
src/metrics/: __init__.py  base.py  heat_map_metrics.py  heat_map_regression_metrics.py  pcp_metrics.py  regression_metrics.py  regression_visualization_metrics.py  root_regression_metrics.py
src/models/: dispose_module.py
src/models/assignment/: data.py  decode.py  denoiser.py  edge_cues.py  graph.py  hyper_graph_conv.py  sampler.py  sinkhorn.py
src/models/nets/: __init__.py  backbone_res_net.py  pose_regression_net.py  root_regression_net.py
src/models/regression/: __init__.py  graph_decoder.py  t_pose_prior.py
src/models/shared/: deform_func.py  proj_attention.py  triangulation.py
src/utils/: camera.py  common.py  linear_algebra.py  method.py  paramUtil.py  resume.py
